fix(theme): black color exists in both light and dark, fix e mixin, fix button vertical-align issue

--- a/packages/theme/src/scss/components/button/basic.scss
+++ b/packages/theme/src/scss/components/button/basic.scss
@@ -36,7 +36,7 @@ $button-loading-opacity: 0.7 !default;
   box-sizing: border-box;
   flex-shrink: 0;
   user-select: none;
-  vertical-align: top;
+  // vertical-align: top; // remove this to make ghost button with only icon as its child align normally
   cursor: pointer;
 
   @include is(disabled, true) {
